[JENKINS-56018] Remove jaxb libraries and enable-future-java
It's not needed on Jenkins >=2.164, and it's the recommended version to
test Java 11.